--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -5,6 +5,8 @@ html(ng-app='dashboard')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='chartist/dist/chartist.min.css')
+    link(rel='stylesheet', href='font-awesome-4.7.0/css/font-awesome.min.css')
+
 
   style.
    /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -90,7 +92,8 @@ html(ng-app='dashboard')
             p Students view of own data
             a.thumbnail
              img(src='img/user-icon.png')
-            p Progress
+            p Progress 
+             span.fa.fa-bar-chart
             div.progress(ng-controller='scoreBasedProgressController')
              div.progress-bar(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: {{progress}}em;")
               span {{progress}}%
@@ -102,9 +105,11 @@ html(ng-app='dashboard')
               .panel-heading
                ul.nav.nav-tabs
                 li.active
-                 a.success(href='#progressSnapshot', data-toggle='tab') Progress Snapshot 
-                li
-                 a(href='#currentScore', data-toggle='tab') Current Score vs. Class Score 
+                 a.success(href='#progressSnapshot', data-toggle='tab') Progress Snapshot  
+                  span.fa.fa-line-chart
+                li 
+                 a(href='#currentScore', data-toggle='tab') Current Score vs. Class Score  
+                  span.fa.fa-users 
                   
 
               .panel-body
@@ -116,17 +121,27 @@ html(ng-app='dashboard')
                     div.ct-chartProgress.ct-golden-section
                    .col-sm-3 
                        div
-                        h5 Skills mastered:     
+                        p
+                        p
+                         span.fa.fa-trophy   
+                         |  Skills mastered:     
                          label.label-success 
                           span(style= 'color:white') {{highContent.length}}
 
-                       h5 Skills to complete:
-                        label.label-warning 
-                         span(style= 'color:white') {{notStarted.length}}
-
-                       h5 Skills to improve: 
-                        label.label-danger
-                         span(style= 'color:white') {{lowContent.length}}   
+                       div
+                        p
+                         span.fa.fa-pencil-square-o 
+                         |  Skills to complete:    
+                         label.label-warning 
+                          span(style= 'color:white') {{notStarted.length}}
+                       
+                      
+                       div
+                        p
+                         span.fa.fa-frown-o
+                         |  Skills to improve: 
+                         label.label-danger
+                          span(style= 'color:white') {{lowContent.length}}   
                 
                
                 #currentScore.tab-pane.fade
@@ -138,11 +153,16 @@ html(ng-app='dashboard')
 
           .col-sm-5.col-xs-12
            .well(ng-controller='currentSkillController')
-            h4 Current Goal
-            p {{currentSkill['content-name']}}
+            h4 Current Goal  
+             i.fa.fa-star(style='font-size:24px;color:#449d44')
+            p - {{currentSkill['content-name']}}
+            p 
             row
-             .col-sm-6
+             .col-sm-1
               p
+              div
+               span.fa.fa-mortar-board
+             .col-sm-5  
               p Current Best Score:
              .col-sm-6
               p
@@ -150,32 +170,47 @@ html(ng-app='dashboard')
                 div.progress-bar(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: {{currentSkill['calc-percentage-score']}}%;")
                  span {{currentSkill['calc-percentage-score']}}%
             row
-             .col-sm-6
+             .col-sm-1
+              div
+               span.fa.fa-history
+             .col-sm-5  
               p Last Score
              .col-sm-6
               div.progress
                div.progress-bar(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: {{currentSkill.attempts['1']['score']}}%;")
                 span {{currentSkill['calc-percentage-score']}}%
             row
-             .col-xs-6
+             .col-xs-1
+              div
+               span.fa.fa-repeat
+             .col-xs-5
               p Attempts
              .col-xs-6
               p 3
               
             row
-             .col-xs-6
+             .col-xs-1
+              div
+               span.fa.fa-hourglass-2  
+             .col-xs-5  
               p Time spent
              .col-xs-6
               p {{currentSkill['total-time']}}  
               
             row
-             .col-xs-6
+             .col-xs-1
+              div
+               span.fa.fa-calendar
+             .col-xs-5
               p Last attempt:
              .col-xs-6
              p {{currentSkill.attempts['1']['last-access'] * 1000 | date:'medium'}}
 
             row
-              .col-xs-6
+              .col-xs-1
+               div
+                span.fa.fa-eye
+              .col-xs-5
                p View other goals
               .col-xs-6
                p
@@ -188,7 +223,8 @@ html(ng-app='dashboard')
              .panel-heading
               ul.nav.nav-tabs
                li.active
-                a(href='#unitProgress', data-toggle='tab') Performance by Unit/Skill type 
+                a(href='#unitProgress', data-toggle='tab') Performance by Unit/Skill type  
+                 span.fa.fa-bar-chart
 
 
              .panel-body
@@ -228,7 +264,7 @@ html(ng-app='dashboard')
                   ul.list.list-group
                    li.media.list(ng-repeat="title in highContent") 
                     div.media-left
-                     span.glyphicon.glyphicon-star
+                     span.fa.fa-thumbs-up
                     div.media-body
                      | {{title}}
                 
